@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-10-12T02:00:05Z",
-  "count_outdated" : 5942,
-  "uniques_outdated" : 1224,
+  "timestamp" : "2025-10-14T01:56:21Z",
+  "count_outdated" : 5944,
+  "uniques_outdated" : 1226,
   "count" : 6015,
   "uniques" : 1253,
   "views" : [
-    {
-      "timestamp": "2025-09-29T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 2,
-      "uniques_minmax": [ 1, 2 ],
-      "uniques_decinc": [ 0, 2 ]
-    },
     {
       "timestamp": "2025-09-30T00:00:00Z",
       "count": 4,
