@@ -1,12 +1,7 @@
 {
-  "count": 73,
-  "uniques": 26,
+  "count": 71,
+  "uniques": 24,
   "views": [
-    {
-      "timestamp": "2025-09-29T00:00:00Z",
-      "count": 2,
-      "uniques": 2
-    },
     {
       "timestamp": "2025-09-30T00:00:00Z",
       "count": 4,
